feat(news): Phase 1 日报质量止血——空精选合法化/降级保守化/同日合并/触发鉴权
- CurateResponse.parse: items=[] 视为合法空精选，不再当解析失败触发降级
- NewsAiCuratorImpl.fallback: 不再 raw 全量出页，改为按源限量(每源≤fallbackPerSource、
  总数≤fallbackMaxItems)+过滤低价值关键词/非法链接，brief 标记降级来源
- DailyNewsSchedule.generateNow: 同日合并既有已选条目(按链接 hash union，本次覆盖)，
  空精选且无既有内容则跳过出页(宁缺毋滥，不覆盖)；新增生成互斥(NewsGenerationBusyException)
- NewsAdminController: /news/run 增加令牌鉴权(fail-closed)+限流(429)+互斥(409)
- NewsConfig: 新增 ai.fallback*/lowValueKeywords 与 admin.token/rateLimitMillis
- application.yml: 补 news.admin/ai.fallback 配置占位
- 单测：curator 空精选合法+保守降级；schedule 合并/空跳过/互斥；controller 鉴权/限流/409

仅 Phase 1（无 schema 变更，可安全走 push master）。Phase 2-4 见 06 需求文档。